Update button, change typography

--- a/src/styles/base/fonts.scss
+++ b/src/styles/base/fonts.scss
@@ -51,3 +51,12 @@
   font-display: swap;
   src: url("/fonts/FK_Grotesk_Monospaced_Medium.woff2") format("woff2");
 }
+
+// FK Grotesk Mono Medium Font face
+@font-face {
+  font-family: "Boldena Bold";
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+  src: url("/fonts/BoldenaBold.woff2") format("woff2");
+}
