--- a/src/styles/base/typography.scss
+++ b/src/styles/base/typography.scss
@@ -1,7 +1,7 @@
 // This file contains all global typography.
 
 :root {
-  font-family: var(--font-family-boldena);
+  font-family: var(--font-family-quicksand);
   font-optical-sizing: auto;
 }
 
